--- a/package.json
+++ b/package.json
@@ -13,8 +13,14 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/vue-fontawesome": "^3.0.8",
+    "@headlessui/vue": "^1.7.22",
+    "@octokit/rest": "^21.0.1",
     "@unhead/vue": "^1.9.16",
     "axios": "^1.7.2",
+    "octokit": "^4.0.2",
     "pinia": "^2.1.7",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
@@ -28,10 +34,10 @@
     "@vue/eslint-config-typescript": "^13.0.0",
     "@vue/tsconfig": "^0.5.1",
     "autoprefixer": "^10.4.19",
-    "postcss": "^8.4.40",
     "eslint": "^8.57.0",
     "eslint-plugin-vue": "^9.23.0",
     "npm-run-all2": "^6.2.0",
+    "postcss": "^8.4.40",
     "prettier": "^3.2.5",
     "tailwindcss": "^3.4.7",
     "typescript": "~5.4.0",
