--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,1 @@
-VITE_MODE="development"
-VITE_ROOT_WEB="https://localhost:1585"
-VITE_GITHUB_TOKEN="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"
+VITE_GITHUB_TOKEN="YOUR TOKEN HERE"
