--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,1 @@
-VITE_MODE="production"
-VITE_ROOT_WEB=""
-VITE_GITHUB_TOKEN="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"
+VITE_GITHUB_TOKEN="YOUR TOKEN HERE"
