--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/vue-fontawesome": "^3.0.8",
     "@headlessui/vue": "^1.7.22",
+    "@kyvg/vue3-notification": "^3.2.1",
     "@octokit/rest": "^21.0.1",
     "@unhead/vue": "^1.9.16",
     "axios": "^1.7.2",
+    "chart.js": "^4.4.3",
     "octokit": "^4.0.2",
     "pinia": "^2.1.7",
     "vue": "^3.4.29",
+    "vue-chartjs": "^5.3.1",
     "vue-router": "^4.3.3"
   },
   "devDependencies": {
